Warn if enable-bit-vectors is used. It is default and has no effect any longer.